# drgtw

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.models  Dockerfile.runtime  LICENSE  LICENSE-ENTERPRISE.md  NOTICE  README.md  compose-drgtw.toml  compose.yml  drgtw.toml.example  drgtw.ui-concept.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  models.yml  release.yml
bins/drgtw/: Cargo.toml
bins/drgtw-bench/: Cargo.toml
bins/drgtw-bench/src/: main.rs  memory.rs
bins/drgtw/src/: lib.rs  main.rs  server.rs
bins/drgtw/src/middleware/: request_id.rs
bins/drgtw/src/routes/: health.rs
bins/drgtw/tests/: e2e.rs  e2e_postgres.rs  ui.rs  vault_e2e.rs
crates/drgtw-config/: Cargo.toml
crates/drgtw-config/src/: edit.rs  lib.rs
crates/drgtw-events/: Cargo.toml
crates/drgtw-events/src/: cost.rs  event.rs  extract.rs  lib.rs  sink.rs
crates/drgtw-guardrails/: Cargo.toml
crates/drgtw-guardrails/src/: builtins.rs  engine.rs  guardrail.rs  lib.rs  outcome.rs
crates/drgtw-history/: Cargo.toml
crates/drgtw-history/migrations/: 001_initial.sql  002_ui_features.sql
crates/drgtw-history/src/: delivery_log.rs  error.rs  handle.rs  lib.rs  tests.rs  types.rs
crates/drgtw-history/src/pg/: mod.rs
crates/drgtw-keys/: Cargo.toml
crates/drgtw-keys/src/: lib.rs
crates/drgtw-mcp/: Cargo.toml
crates/drgtw-mcp/src/: gateway.rs  jsonrpc.rs  lib.rs  upstream.rs
crates/drgtw-mcp/tests/: aggregate.rs  upstream_client.rs
crates/drgtw-ner/: Cargo.toml
crates/drgtw-ner/src/: lib.rs  model.rs  pool.rs
crates/drgtw-ner/tests/: real_model.rs
crates/drgtw-otel/: Cargo.toml
crates/drgtw-otel/src/: lib.rs
crates/drgtw-otel/tests/: in_memory.rs  otlp_http_smoke.rs
crates/drgtw-pii/: Cargo.toml
crates/drgtw-pii/src/: body.rs  engine.rs  entity_map.rs  lib.rs  ner_bridge.rs  recognizers.rs  store.rs  stream.rs  vault_store.rs
crates/drgtw-pii/tests/: engine.rs  store.rs  stream.proptest-regressions  stream.rs
crates/drgtw-proxy/: Cargo.toml
crates/drgtw-proxy/src/: converse.rs  error.rs  eventstream.rs  handlers.rs  lib.rs  mcp.rs  otel_enrich.rs  otel_propagation.rs  reload.rs  sigv4.rs  sse_restore.rs  state.rs  upstream.rs  usage_tap.rs
crates/drgtw-proxy/tests/: aliases_metadata.rs  anthropic.rs  bedrock.rs  bedrock_converse.rs  debug_header.rs  embeddings_vault.rs  fallback_budget_events.rs  guardrails.rs  mcp.rs  otel.rs  otel_spans.rs  pii_history.rs  pii_pipeline.rs  proxy.rs  sse_restore.rs  tracing.rs  usage_broadcast.rs
crates/drgtw-trace/: Cargo.toml
crates/drgtw-trace/src/: lib.rs
crates/drgtw-trace/tests/: writer.rs
crates/drgtw-ui/: Cargo.toml
crates/drgtw-ui-auth/: Cargo.toml
crates/drgtw-ui-auth/src/: cookie.rs  csrf.rs  error.rs  lib.rs  password.rs  session.rs
crates/drgtw-ui/src/: assets.rs  auth.rs  csrf.rs  layout.rs  lib.rs  mask.rs
crates/drgtw-ui/src/pages/: analytics.rs  audit.rs  budgets.rs  coming.rs  config.rs  connections.rs  dashboard.rs  keys.rs  limits.rs  mcp.rs  mod.rs  pii.rs  settings.rs  setup.rs  team.rs  traces.rs  webhooks.rs
crates/drgtw-ui/styles/: input.css  theme.css
crates/drgtw-vault/: Cargo.toml
crates/drgtw-vault/src/: lib.rs
demo/: README.md  compose.yml  gateway-config.toml  portal-nginx.conf
demo/portal/: app.js  index.html  style.css
docs/: config-reference.md  mcp.md  pii.md  roadmap.md  training-guide.md
migrations/: 001_initial.sql
training/: .gitignore  README.md  pyproject.toml
training/drgtw_training/: __init__.py  __main__.py  annotate.py  data.py  export.py  labels.py  smoke.py  synth.py  train.py
training/scripts/: smoke_e2e.sh
training/tests/: test_align.py  test_data.py  test_export.py  test_synth.py
