[package]
name = "drgtw"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
drgtw-config.workspace = true
drgtw-pii.workspace = true
drgtw-proxy.workspace = true

axum.workspace = true
clap.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
drgtw-config.workspace = true
drgtw-proxy.workspace = true
axum.workspace = true
bytes.workspace = true
http-body-util = "0.1"
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
wiremock.workspace = true
