[package]
name = "drgtw-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
wiremock.workspace = true
