[package]
name = "drgtw-ner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ndarray.workspace = true
ort = { workspace = true, features = ["download-binaries"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tracing.workspace = true
