[package]
name = "drgtw-otel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
drgtw-config.workspace = true

opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

anyhow.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
opentelemetry-proto.workspace = true
tokio.workspace = true
wiremock.workspace = true
prost = "0.14"
