[package]
name = "drgtw-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
drgtw-config.workspace = true
drgtw-keys.workspace = true
drgtw-events.workspace = true
drgtw-mcp.workspace = true
drgtw-otel.workspace = true
drgtw-pii.workspace = true
drgtw-trace.workspace = true
drgtw-vault.workspace = true
# Optional Postgres history store for fire-and-forget usage recording. Depended
# on without `postgres` by default (no-op disabled handle); the bin's `ui`
# feature turns it on. See [features].
drgtw-history.workspace = true

aws-sigv4.workspace = true
aws-credential-types.workspace = true
axum.workspace = true
crc32fast.workspace = true
bytes.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
arc-swap.workspace = true

[features]
# Enable the live Postgres history store (pulls in sqlx via drgtw-history).
# Off by default so this crate builds/tests DB-free.
postgres = ["drgtw-history/postgres"]

[dev-dependencies]
wiremock.workspace = true
tower.workspace = true
tempfile.workspace = true
regex.workspace = true
crc32fast.workspace = true
serde_json.workspace = true
http-body-util = "0.1"
opentelemetry_sdk = { workspace = true, features = ["testing"] }
tracing-subscriber.workspace = true
