[package]
name = "drgtw-ui-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

# Pure auth primitives for the admin UI: argon2 password hashing/verification,
# signed-cookie session tokens (HMAC-SHA256), and CSRF tokens. No axum wiring
# here — the router/middleware integration lives in drgtw-ui.
[dependencies]
argon2 = { workspace = true, features = ["password-hash", "rand"] }
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
subtle.workspace = true
thiserror.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
