[package]
name = "drgtw-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
drgtw-config.workspace = true
drgtw-ui-auth.workspace = true

axum = { workspace = true, features = ["form"] }
datastar.workspace = true
futures.workspace = true
maud.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml_edit.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tempfile.workspace = true
tower.workspace = true
