[package]
name = "drgtw-vault"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
aes-gcm.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
